# LanguageStatistic

./: fetch.py  plot.py  pyproject.toml
stat/: stat_2022-01.csv  stat_2022-02.csv  stat_2022-03.csv  stat_2022-04.csv  stat_2022-05.csv  stat_2022-06.csv  stat_2022-07.csv  stat_2022-08.csv  stat_2022-09.csv  stat_2022-10.csv  stat_2022-11.csv  stat_2022.csv
