[tool.poetry]
name = "Language Statistic"
version = "1.0.0"
description = "Show the freqency of languages used by GitHub repositories"
authors = ["mikucat0309 <47076023+mikucat0309@users.noreply.github.com>"]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
requests = "^2.28.1"
pygobject = "^3.42.2"
pycairo = "^1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
